[package]
name = "iceoryx2-bb-compatability"
description = "iceoryx2: compatability layer switching building blocks based on features"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["once_cell/std"]

[dependencies]
hashbrown = { workspace = true }
once_cell = { workspace = true }
spin = { workspace = true }
